; ModuleID = '/home/carl/AnghaBench/hashcat/deps/xxHash/extr_xxhsum.c_BMK_testSequence64.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/xxHash/extr_xxhsum.c_BMK_testSequence64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i32, i32)* @BMK_testSequence64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @BMK_testSequence64(i8* %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @XXH64(i8* %12, i64 %13, i32 %14)
  store i32 %15, i32* %10, align 4
  %16 = load i32, i32* %10, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @BMK_checkResult64(i32 %16, i32 %17)
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @XXH64_reset(i32* %9, i32 %19)
  %21 = load i8*, i8** %5, align 8
  %22 = load i64, i64* %6, align 8
  %23 = trunc i64 %22 to i32
  %24 = call i32 @XXH64_update(i32* %9, i8* %21, i32 %23)
  %25 = call i32 @XXH64_digest(i32* %9)
  store i32 %25, i32* %10, align 4
  %26 = load i32, i32* %10, align 4
  %27 = load i32, i32* %8, align 4
  %28 = call i32 @BMK_checkResult64(i32 %26, i32 %27)
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @XXH64_reset(i32* %9, i32 %29)
  store i64 0, i64* %11, align 8
  br label %31

31:                                               ; preds = %40, %4
  %32 = load i64, i64* %11, align 8
  %33 = load i64, i64* %6, align 8
  %34 = icmp ult i64 %32, %33
  br i1 %34, label %35, label %43

35:                                               ; preds = %31
  %36 = load i8*, i8** %5, align 8
  %37 = load i64, i64* %11, align 8
  %38 = getelementptr inbounds i8, i8* %36, i64 %37
  %39 = call i32 @XXH64_update(i32* %9, i8* %38, i32 1)
  br label %40

40:                                               ; preds = %35
  %41 = load i64, i64* %11, align 8
  %42 = add i64 %41, 1
  store i64 %42, i64* %11, align 8
  br label %31

43:                                               ; preds = %31
  %44 = call i32 @XXH64_digest(i32* %9)
  store i32 %44, i32* %10, align 4
  %45 = load i32, i32* %10, align 4
  %46 = load i32, i32* %8, align 4
  %47 = call i32 @BMK_checkResult64(i32 %45, i32 %46)
  ret void
}

declare dso_local i32 @XXH64(i8*, i64, i32) #1

declare dso_local i32 @BMK_checkResult64(i32, i32) #1

declare dso_local i32 @XXH64_reset(i32*, i32) #1

declare dso_local i32 @XXH64_update(i32*, i8*, i32) #1

declare dso_local i32 @XXH64_digest(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
